--- a/.buildkite/pipeline.build_core.yml
+++ b/.buildkite/pipeline.build_core.yml
@@ -1,25 +1,13 @@
 #ci:group=:book: core tests (civ2)
 
-- label: ":python: small & medium"
-- label: ":python: small & medium"
-  conditions: ["RAY_CI_PYTHON_AFFECTED"]
-  instance_size: medium
-  parallelism: 3
-  commands:
-    - cleanup() { if [ "${BUILDKITE_PULL_REQUEST}" = "false" ]; then ./ci/build/upload_build_info.sh; fi }; trap cleanup EXIT
-    - DL=1 ./ci/env/install-dependencies.sh
-    - ./ci/env/env_info.sh
-    - bazel run //ci/ray_ci -- //python/ray/tests/... //python/ray/dag/... core --size small,medium --concurrency "$${BUILDKITE_PARALLEL_JOB_COUNT}" --shard "$${BUILDKITE_PARALLEL_JOB}"
-
-- label: ":python: large"
+- label: ":python:"
   conditions: ["RAY_CI_PYTHON_AFFECTED"]
   instance_size: large
-  parallelism: 3
+  parallelism: 6
   commands:
     - cleanup() { if [ "${BUILDKITE_PULL_REQUEST}" = "false" ]; then ./ci/build/upload_build_info.sh; fi }; trap cleanup EXIT
-    - DL=1 ./ci/env/install-dependencies.sh
     - ./ci/env/env_info.sh
-    - bazel run //ci/ray_ci -- //python/ray/tests/... //python/ray/dag/... core --size large --concurrency "$${BUILDKITE_PARALLEL_JOB_COUNT}" --shard "$${BUILDKITE_PARALLEL_JOB}"
+    - bazel run //ci/ray_ci -- //python/ray/tests/... //python/ray/dag/... core --workers "$${BUILDKITE_PARALLEL_JOB_COUNT}" --worker-id "$${BUILDKITE_PARALLEL_JOB}" --parallelism-per-worker 3
 
 - label: ":python: flaky"
   conditions: ["RAY_CI_PYTHON_AFFECTED"]
@@ -27,6 +15,5 @@
   soft_fail: true
   commands:
     - cleanup() { if [ "${BUILDKITE_PULL_REQUEST}" = "false" ]; then ./ci/build/upload_build_info.sh; fi }; trap cleanup EXIT
-    - DL=1 ./ci/env/install-dependencies.sh
     - ./ci/env/env_info.sh
     - bazel run //ci/ray_ci -- //python/ray/tests/... //python/ray/dag/... core --run-flaky-tests
